# object_follower

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: object_follower.yaml  object_follower.yml
launch/: obj_follower_sim.launch
object_follower/: package.xml  setup.cfg  setup.py
object_follower/config/: object_follower.yaml  params.yaml
object_follower/object_follower/: ImageProcessing.py  object_follower.py
object_follower_hardware/: CMakeLists.txt  package.xml
object_follower_hardware/config/: object_follower.yaml
object_follower_hardware/launch/: obj_follower_sim.launch
object_follower_hardware/src/: camera_publisher.py  diff.py  motor_controller.py  vel_sub.py
object_follower_sim/: CMakeLists.txt  package.xml
object_follower_sim/config/: bridge.yaml
object_follower_sim/env_hooks/: object_follower_sim.sh.in
object_follower_sim/gazebo/: mr_robot_plugins.gazebo
object_follower_sim/launch/: gz_sim.launch.py  mr_robot.launch.py  obj_follower_sim.launch  object_follower_sim.launch.py
object_follower_sim/src/: object_follower.py  object_tracking.cpp
object_follower_sim/urdf/: mr_robot.sdf  mr_robot.urdf  mr_robot.xacro
object_follower_sim/worlds/: four_wall.sdf
src/: Object_Tracking.py  object_follower.py  opencv_publisher.py
worlds/: bot_world.world
